--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "scripts": {
+  "start": "node server.js"
+}
+
   }
 }
