--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "scripts": {
-  "start": "node server.js"
+  "scripts": {
+  "start": "node server.js",
+  "dev": "react-scripts start",
+  "build": "react-scripts build"
 }
 
   }
